<resources>
    <string name="app_name">Capstone Project</string>
    <string name="welcome">Welcome.</string>
    <string name="favorites">Favorites</string>
    <string name="search_hint">Search</string>
    <string name="user_image">User Image.</string>
    <string name="categories">Categories</string>
    <string name="new_products">New Products</string>
    <string name="campaigns">Campaigns</string>
    <string name="check_this_out">Check this out</string>
    <string name="arrow_back">Back</string>
    <string name="product_name">Product Name</string>
    <string name="product_desc">Product Description</string>
    <string name="product_price">50 $</string>
    <string name="product_price_title">Product Price</string>
    <string name="add_button">Cart</string>
    <string name="proceed_checkout">Proceed To Checkout</string>
    <string name="shopping_bag">Shopping Bag</string>
    <string name="subtotal">Subtotal :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_collection">Your collection is empty, do you want to add something?</string>
    <string name="discover">Discover</string>
    <string name="name">Name</string>
    <string name="user_name">User Name</string>
    <string name="mail">Mail</string>
    <string name="phone">Phone</string>
    <string name="purchased_items">Purchased Items</string>
    <string name="_25">25</string>
    <string name="birthday">Birthday</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="user_name_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="phone_">Phone</string>
    <string name="last_name">Last Name</string>
    <string name="empty_list">Looks like you haven\'t added any products to this list.</string>
    <string name="empty_basket">It seems your cart is empty, would you like to add products?</string>
    <string name="your_order_has_been_received">Your order has been received.</string>
    <string name="purchased">Purchased</string>
    <string name="collections">Collections</string>
    <string name="create_product">Create Product</string>
    <string name="product_title">Product Title</string>
    <string name="product_description">Product Description</string>
    <string name="product_image">Product Image</string>
    <string name="product_category">Product Category</string>
    <string name="product_count">Product Count</string>
    <string name="sale">Sale</string>
    <string name="user_phone">User Phone</string>
    <string name="user_address">User Address</string>
    <string name="address">Address</string>
    <string name="adress">Adress</string>
    <string name="reset_password">Reset Password</string>
    <string name="discount">Discount</string>
    <string name="sucess_order">Your order will be delivered soon. Thank you for choosing our app!</string>
    <string name="your_order_is_being_processed">Your order is being processed.</string>
    <string name="independent_record_store">Independent Record Store</string>

</resources>