<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:padding="@dimen/layout_margin">

        <ImageButton
            android:id="@+id/bvArrowBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_top_margin"
            android:background="@drawable/ic_arrow_back"
            android:contentDescription="@string/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            style="@style/shopping_text"
            android:fontFamily="@font/roboto"
            android:text="@string/shopping_bag"
            app:layout_constraintBottom_toBottomOf="@id/bvArrowBack"
            app:layout_constraintEnd_toStartOf="@id/bvCard"
            app:layout_constraintStart_toEndOf="@id/bvArrowBack"
            app:layout_constraintTop_toTopOf="@id/bvArrowBack" />

        <ImageButton
            android:id="@+id/bvCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_top_margin"
            android:background="@drawable/ic_shopping_bag"
            android:contentDescription="@string/arrow_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/bvProceedToCheckout"
            style="@style/extended_fab"
            android:layout_width="match_parent"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/proceed_checkout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvShoppingItems"
            android:layout_width="match_parent"
            android:layout_height="@dimen/rv_item_height"
            android:padding="@dimen/item_padding"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bvArrowBack" />

        <TextView
            android:id="@+id/tvShoppingSubTotal"
            style="@style/shopping_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/subtotal"
            app:layout_constraintBottom_toTopOf="@id/bvProceedToCheckout"
            app:layout_constraintStart_toStartOf="@id/bvArrowBack" />

        <TextView
            android:id="@+id/tvShoppingPrice"
            style="@style/title_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/product_price"
            app:layout_constraintBottom_toTopOf="@id/bvProceedToCheckout"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>